[package]
name = "Runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
async-channel = "1.9"
scoped-tls = "1.0"
async-std = { version = "1.9", features = ["attributes"] }
pin-utils = "0.1"
